# auto-wiki

./: .gitignore  LICENSE  README.md  pyproject.toml
auto_wiki/: auto_wiki_gpt.py  auto_wiki_gpt_prompt.py  chains.py  prompts.py  proto.ipynb  run.py  tools.py  topic_refine_chain.py  utils.py
docs/: 2303.16199.md  2303.17760.md  2304.03843.md  2304.03843_summary.md  AI_Alignment_Techniques.md  CAMEL: Communicative Agents for 'Mind' Exploration of Large Scale Language Model Society.md  Contrastive_Disentangled_Representation_Learning.md  LLaMA-Adapter.md  MRKL_Systems.md  ReAct.md  Teaching_Large_Language_Models_to_Self-Debug.md  Toolformer: Language Models Can Teach Themselves to Use Tools.md  example.md  overview.md
tests/: recall_test.ipynb
